--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: Arm4nd7 # Your GitHub organization or username, where this repository lives
+repo: Test-CICD-updatetime # The name of this repository
 
 sites:
   - name: Google
