--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,6 +3,8 @@ owner: Arm4nd7 # Your GitHub organization or username, where this repository liv
 repo: Test-CICD-updatetime # The name of this repository
 
 sites:
+  - name: Puce
+    url: https://www.puce.edu.ec/
   - name: Google
     url: https://www.google.com
   - name: Wikipedia
